--- a/content/posts/2021-04-20-corpus.markdown
+++ b/content/posts/2021-04-20-corpus.markdown
@@ -3,19 +3,23 @@ layout: post
 title:  "Corpi"
 date:   2021-04-13 11:42:24 -0400
 categories: jekyll update
---- 
+---
 
-### Susan Bradford Eppes, *Through Some Eventful Years* (Georgia: J. W. Burke Company, 1926), 383. 
+# Corpi
+
+<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/9f990de9-2efe-4a6f-9b9e-87bfa3b5d13e/page/XLbCC" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+### Susan Bradford Eppes, *Through Some Eventful Years* (Georgia: J. W. Burke Company, 1926), 383.
 
 Eppes' textbook is the published diary of Susan Bradford Eppes. Her diary is a useful tool due to her depiction of the Civil War and Reconstruction Era and her life in Tallahassee, Florida during this time period. She provides an honest account of her life and this is a text Rutherford and the United Daughters of the Confederacy (UDC) would find helpful in teaching Lost Cause mythology.  
 
-### Mildred Lewis Rutherford, *Truths of History* (Georgia, 1920), 149. 
+### Mildred Lewis Rutherford, *Truths of History* (Georgia, 1920), 149.
 
-This text is a book of quotes from "men of unquestioned authority" discussing the South, the Civil War, and how the causes of the Civil War have been misintrepeted and missued to push a narrative by the North. Chatpers include titles such as "The War between the states was not fought to hold the Slaves", "The South desired peace and made every effort to obtain it", and "The South has never had her rightful place in literature." Rutherford wrote and self-published this text to continue to push her narrative of the South and how Reconstruction pedagogy was being shaped. "We of the South have allowed this history written from the Northern viewpoint, with absolutre ignorance of the South, to be taught in our schools all these years with an indifference that is truly appalling" (VII). 
+This text is a book of quotes from "men of unquestioned authority" discussing the South, the Civil War, and how the causes of the Civil War have been misintrepeted and missued to push a narrative by the North. Chatpers include titles such as "The War between the states was not fought to hold the Slaves", "The South desired peace and made every effort to obtain it", and "The South has never had her rightful place in literature." Rutherford wrote and self-published this text to continue to push her narrative of the South and how Reconstruction pedagogy was being shaped. "We of the South have allowed this history written from the Northern viewpoint, with absolutre ignorance of the South, to be taught in our schools all these years with an indifference that is truly appalling" (VII).
 
-### Mildred Lewis Rutherford, *A Measuring Rod To Test Text Books, and Reference Books in Schools, Colleages and Libraries* (Georgia, 1919), 33. 
+### Mildred Lewis Rutherford, *A Measuring Rod To Test Text Books, and Reference Books in Schools, Colleages and Libraries* (Georgia, 1919), 33.
 
-Rutherford spent her post-Civil War and post-Reconstruction years devoted to telling the "historical truths" of the South. This text is another example of her life-long work "correcting" the narrative about the South in the minds of Americans. 
+Rutherford spent her post-Civil War and post-Reconstruction years devoted to telling the "historical truths" of the South. This text is another example of her life-long work "correcting" the narrative about the South in the minds of Americans.
 
 ### Other Texts I'd like to Use
-- United Daughters of the Confederacy Constitution 
+- United Daughters of the Confederacy Constitution
